// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles organization 1`] = `
<header
  className="page-header text-center"
>
  <div
    className="button-group"
  >
    <Link
      activeClassName="button-active"
      className="button"
      id="favorite-projects"
      onClick={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/organizations/org/projects/favorite",
          "query": Object {
            "size": 1,
          },
        }
      }
    >
      my_favorites
    </Link>
    <IndexLink
      activeClassName="button-active"
      className="button"
      id="all-projects"
      onClick={[Function]}
      to={
        Object {
          "pathname": "/organizations/org/projects",
          "query": Object {
            "size": 1,
          },
        }
      }
    >
      all
    </IndexLink>
  </div>
</header>
`;

exports[`renders for logged in user 1`] = `
<header
  className="page-header text-center"
>
  <div
    className="button-group"
  >
    <Link
      activeClassName="button-active"
      className="button"
      id="favorite-projects"
      onClick={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/projects/favorite",
          "query": Object {
            "size": 1,
          },
        }
      }
    >
      my_favorites
    </Link>
    <IndexLink
      activeClassName="button-active"
      className="button"
      id="all-projects"
      onClick={[Function]}
      to={
        Object {
          "pathname": "/projects",
          "query": Object {
            "size": 1,
          },
        }
      }
    >
      all
    </IndexLink>
  </div>
</header>
`;
